# Spbstu-lab-C-2019

./: .gitignore  README.md
7/: Shape.hpp  Square.hpp  Triangle.cpp  functions.cpp  main.cpp
8/: CMakeLists.txt  options.cpp
B1/: CMakeLists.txt  main.cpp  point1.cpp  point2.cpp  point3.cpp  point4.cpp  source.hpp
B2/: CMakeLists.txt  main.cpp  opOne.cpp  opTwo.cpp  options.hpp  queue.hpp
B3/: CMakeLists.txt  factorialContainer.cpp  factorialContainer.hpp  factorials.cpp  factorials.hpp  main.cpp  phonebook.cpp  phonebook.hpp  phonebookInterface.cpp  phonebookInterface.hpp
B4/: CMakeLists.txt  main.cpp
B5/: CMakeLists.txt  main.cpp  part.hpp  part1.cpp  part2.cpp
B6/: CMakeLists.txt  getStats.cpp  getStats.hpp  main.cpp
B7/: CMakeLists.txt  Circle.hpp  Square.cpp  Triangle.hpp
B8/: main.cpp  options.hpp
